# duckie-killer

./: .gitignore  README.md  sources.sh
hand_gestures/: README.md  gesture_recognizer_1.py  requirements.txt
object_detection/: README.md  cam_logic_2.py  cone_detection.py  image_detection.py  person_cone_detection.py  person_detection.py
ros2_ws/src/camera_publisher/: package.xml  setup.py
ros2_ws/src/camera_publisher/camera_publisher/: camera_publisher_node.py
ros2_ws/src/guard_follower/: package.xml  setup.cfg  setup.py
ros2_ws/src/guard_follower/guard_follower/: guard_follower_node.py
ros2_ws/src/mode_publisher/: package.xml  setup.cfg  setup.py
ros2_ws/src/mode_publisher/launch/: all_nodes_launch.py
ros2_ws/src/mode_publisher/mode_publisher/: mode_publisher_node.py
ros2_ws/src/navigator/: package.xml  setup.py
ros2_ws/src/navigator/navigator/: navigator_node.py
ros2_ws/src/yolo_detector/: package.xml  setup.py
ros2_ws/src/yolo_detector/yolo_detector/: yolo_detector_node.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Object.msg
src/navigation/: package.xml  setup.py
src/navigation/config/: navigation.yaml
src/navigation/launch/: gesture_launch.py  rover_launch.py
src/navigation/navigation/: guard.py  home.py  navigation.py  rover.py  rover_zero.py  statehandler.py  surveillance.py
src/visual/: package.xml  setup.py
src/visual/launch/: camera_launch.py
src/visual/visual/: camera.py  decomp_test.py  gesture.py
