<?xml version="1.0"?>
<package format="2">
  <name>mode_publisher</name>
  <version>0.0.0</version>
  <description>ROS2 node for publishing mode based on user input</description>

  <maintainer email="your_email@example.com">your_name</maintainer>

  <license>License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

